improv catg page p catg aggri catg improv or add

--- a/css/global.css
+++ b/css/global.css
@@ -3,6 +3,7 @@
 /* start var */
 :root{
     --main-color: #2196f3;
+    --main-dark: #002D62;
     --main-bg-color: #f6f6f6;
 }
 /* end var */
@@ -11,8 +12,22 @@
   box-sizing: border-box;
 }
 
+i{
+  color: var(--main-color)
+}
+
+html{
+  height: 100%;
+  
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 body {
   font-family: "cairo", "sans serif";
+  height: 100%;
 }
 
 .border-radius{
@@ -30,10 +45,50 @@ body {
   padding: 100px 0 30px;
 }
 
+
+
+@media (max-width: 400px){
+  .grid{
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+
+  }
+}
+
 button{
     font-family: "cairo", "sans serif";
 }
 
+.btn{
+  width: 100px;
+  height: 25px;
+  border: 0;
+  text-decoration: none;
+  text-align: center;
+  padding: 3px;
+  color: black;
+  background: var(--main-color);
+  border-radius: 5px;
+  box-shadow: 0 5px 0 #002D62;
+  transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -ms-transition: 0.2s;
+  -o-transition: 0.2s;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  cursor: pointer;
+}
+
+.btn:active{
+  box-shadow: none;
+    transform: translateY(5px);
+    -webkit-transform: translateY(5px);
+    -moz-transform: translateY(5px);
+    -ms-transform: translateY(5px);
+    -o-transform: translateY(5px);
+}
 .container {
   padding: 0 15px;
   margin: 0 auto;
@@ -41,7 +96,7 @@ button{
 
 @media (max-width: 576px) {
   .container {
-    width: 95%;
+    width: 90%;
     padding: 0;
   }
 }
@@ -114,6 +169,12 @@ button{
 
 .nav .container .links .main-links li:not(:last-child) {
   margin: 0 15px 0 0;
+}
+
+@media (max-width: 567px){
+  .nav .container .links .main-links li:not(:last-child) {
+    margin: 0 5px 0 0;
+  }
 }
 
 .nav .container .links .main-links li a {
