--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,15 +1,22 @@
+html{
+  height: 100%;
+}
+
+body{
+  height: 100%;
+}
 /* start landing sec */
 .landing {
   height: fit-content;
   position: relative;
-  top: 58.4px;
-  margin-bottom: 200px;
+  top: -45px;
+  margin-bottom: 80px;
 }
 
-.landing .container .landing-items {
+/* .landing .container .landing-items {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-}
+} */
 
 .landing .container .landing-items .landing-pic {
   display: flex;
@@ -126,18 +133,39 @@
   text-align: center;
 }
 
-.qualities .container .quality-cards {
+/* .qualities .container .quality-cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 16px 12px;
   padding: 100px 0 30px;
-}
+} */
 
 .qualities .container .quality-cards .quality-card {
   position: relative;
   /* background-color: white; */
   display: flex;
   padding-top: 100%;
+}
+
+.qualities .container .quality-cards .quality-card:nth-child(3) {
+  padding-top: 100%;
+}
+
+
+
+@media (max-width: 768px) {
+  .qualities .container .quality-cards .quality-card {
+    padding-top: 70%;
+  }
+  .qualities .container .quality-cards .quality-card:nth-child(3) {
+    padding-top: 55%;
+  }
+}
+
+@media (max-width: 400px){
+  .qualities .container .quality-cards .quality-card{
+    padding-top: 140%;
+  }
 }
 
 .qualities .container .quality-cards .quality-card i.qlty-icon {
@@ -159,14 +187,7 @@
   line-height: 1.6;
 }
 
-@media (max-width: 768px) {
-  .qualities .container .quality-cards .quality-card {
-    padding-top: 70%;
-  }
-  .qualities .container .quality-cards .quality-card:nth-child(3) {
-    padding-top: 55%;
-  }
-}
+
 
 @media (max-width: 576px) {
   .qualities .container .quality-text {
@@ -175,22 +196,20 @@
   }
 }
 
-.qualities .container .quality-cards .quality-card {
+/* .qualities .container .quality-cards .quality-card {
   padding-top: 100%;
-}
+} */
 
-.qualities .container .quality-cards .quality-card:nth-child(3) {
-  padding-top: 100%;
-}
 /* end quality sec */
-.qualities .container .landing-btn{
+.btn{
   width: 100px;
   height: 25px;
   border: 0;
   position: absolute;
-  bottom: 25px;
+  bottom: 0;
   left: 50%;
   margin: 10px auto;
+  margin-top: 50px;
   text-decoration: none;
   text-align: center;
   padding: 3px;
@@ -215,7 +234,11 @@
   -o-transform: translateX(-50%);
 }
 
-.qualities .container .landing-btn:active{
+.btn{
+  position: relative;
+  bottom: -50px;
+}
+button.btn:active{
   box-shadow: none;
   transform: translateY(5px) translateX(-50%);
   -webkit-transform: translateY(5px) translateX(-50%);
@@ -223,44 +246,42 @@
   -ms-transform: translateY(5px) translateX(-50%);
   -o-transform: translateY(5px) translateX(-50%);
 }
-#up{
-   width: 100px;
-  height: 25px;
-  border: 0;
+
+.bottom a{
   position: absolute;
-  bottom: 25px;
-  left: 50%;
-  margin: 10px auto;
-  text-decoration: none;
-  text-align: center;
-  padding: 3px;
-  color: black;
-  background: var(--main-color);
-  border-radius: 5px;
-  box-shadow: 0 5px 0 #002D62;
-  transition: 0.2s;
-  -webkit-transition: 0.2s;
-  -moz-transition: 0.2s;
-  -ms-transition: 0.2s;
-  -o-transition: 0.2s;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-  cursor: pointer;
-  transform: translateX(-50%);
-  -webkit-transform: translateX(-50%);
-  -moz-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  -o-transform: translateX(-50%);
+    height: 100%;
+    width: 100%;
+    transform: translateX(-60%);
 }
-#up:active{ box-shadow: none;
-  transform: translateY(5px) translateX(-50%);
-  -webkit-transform: translateY(5px) translateX(-50%);
-  -moz-transform: translateY(5px) translateX(-50%);
-  -ms-transform: translateY(5px) translateX(-50%);
-  -o-transform: translateY(5px) translateX(-50%);}
 /* start footer */
+.bottom{
+  background-color: var(--main-bg-color);
+  height: 150px;
+}
+
+@media (min-width: 576px){
+  .bottom{
+    height: 50px;
+  }
+
+  .btn{
+    bottom: 50px;
+  }
+}
+
+@media (max-width: 400px){
+  .bottom{
+    height: 220px;
+  }
+
+  .btn{
+    bottom: -130px;
+  }
+}
+
+
+
+
 .footer{
     height: 150px;
     background-color: #002D62;
