--- a/css/P-catg.css
+++ b/css/P-catg.css
@@ -1,13 +1,13 @@
 /* start projects */
 .projects {
-    background-color: #f6f6f6;
+    background-color: white;
     position: relative;
+    top: 58.4px;
   }
   
   .projects .container .project-text {
     color: black;
     position: absolute;
-    top: -25px;
     left: 50%;
     transform: translateX(-50%);
     -webkit-transform: translateX(-50%);
@@ -16,25 +16,31 @@
     -o-transform: translateX(-50%);
     width: 100%;
     text-align: center;
+    color: var(--main-color);
   }
   
-  .projects .container .project-cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-gap: 16px 12px;
-    padding: 100px 0 30px;
-  }
   
   .projects .container .project-cards .project-card {
     position: relative;
     background-color: white;
     display: flex;
-    padding-top: 57%;
+    padding-top: calc(57% + 45px);
     border-radius: 6px;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     -ms-border-radius: 6px;
     -o-border-radius: 6px;
+    box-shadow: 0 0 4px 1px;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+    background-color: var(--main-bg-color);
+}
+
+.projects .container .project-cards .project-card:hover{
+  box-shadow: 0 0 5px 2px;
 }
   
   .projects .container .project-cards .project-card .project-card-img img {
@@ -42,12 +48,23 @@
     width: 100%;
     top: 0;
     height: fit-content;
+    cursor: pointer;
   }
   
-  .projects .container .project-cards .project-card .project-card-text {
+  .projects .container .project-cards .project-card .project-card-text{
     position: absolute;
-    top: 70px;
+    color: black;
+    bottom: 0;
+    width: 100%;
+    height: 45px;
     text-align: center;
-    line-height: 1.6;
-  }
+    font-weight: 600;
+    background-color: var(--main-bg-color);
+    border-radius: 0 0 6px 6px;
+    -webkit-border-radius: 0 0 6px 6px;
+    -moz-border-radius: 0 0 6px 6px;
+    -ms-border-radius: 0 0 6px 6px;
+    -o-border-radius: 0 0 6px 6px;
+}
+
 /* end projects */
