--- a/css/article.css
+++ b/css/article.css
@@ -1,33 +1,214 @@
+/* global rule */
+.grid-art{
+    display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(35vw, 1fr));
+  grid-gap: 16px 12px;
+  padding: 70px 0 30px;
+}
+
+@media (max-width: 838px){
+.grid-art{
+    grid-template-columns: repeat(auto-fit, minmax(60vw, 1fr));
+}
+}
+
+@media (max-width: 350px){
+    .grid-art{
+        grid-template-columns: repeat(auto-fit, minmax(50vw, 1fr));
+    }
+}
+
+.text-align{
+    text-align: center;
+}
+/* global rule */
+
+
 /* start main page */
 
 .page{
     position: relative;
     top: 58.4px;
-    width: 100vw;
+    width: 100%;
     height: calc(100vh - 58.4px);
-    background-color: rebeccapurple;
     display: grid;
-    grid-template-columns: 15% 1fr;
+    grid-template-columns: 18% 1fr;
+}
+
+@media (max-width: 350px){
+    .page{
+        grid-template-columns: 25% 1fr;
+    }
 }
 
 /* end main page */
 /* start sidebar */
 
 .sidebar{
-    background-color: rgb(242, 242, 242);
-    height: 100%;
+    background-color: var(--main-bg-color);
+    height: calc(100vh - 58.4px);
 
 }
 .sidebar aside{
     position: fixed;
-    background-color: gray;
+    background-color: var(--main-bg-color);
+    height: 100%;
+    direction: rtl;
+    width: 18%;
+}
+
+@media (max-width: 350px) {
+    .sidebar aside{
+        width: 25%;
+    }
+}
+
+.sidebar aside ul{
+    padding: 0;
+    margin: 0;
+    list-style-type: decimal;
+    border: 1px solid black;
+}
+
+.sidebar aside ul li{
+    padding: 10px;
+    margin: 0;
+    min-height: 30px;
+    
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sidebar aside ul li:not(:last-child){
+    border-bottom: 1px solid black;
+}
+
+.sidebar aside ul li a{
+    text-decoration: none;
+    color: var(--main-color);
+
+}
+/* end sidebar */
+/* start info */
+.article-page .container-art .info-section{
+    width: 95%;
+    height: fit-content;
+    margin: 0 auto;
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -o-border-radius: 6px;
+    background-color: var(--main-bg-color);
+    direction: rtl;
+    padding: 0 30px;
+}
+
+.article-page .container-art .info-section .info-section-header{
+    margin: 0 auto;
+    width: fit-content;
+    text-align: center;
+    color: var(--main-color);
+    padding-top: 25px;
+}
+
+.article-page .container-art .info-section .info-cards .info-card{
+    background-color: white;
+    height: 35vw;
+    width: 35vw;
+    border-radius: 6px;
+    margin: 0 auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -o-border-radius: 6px;
+}
+
+@media (max-width: 838px){
+    .article-page .container-art .info-section .info-cards .info-card{
+        height: 60vw;
+        width: 60vw;
+    }
+}
+
+@media (max-width: 350px) {
+    .article-page .container-art .info-section .info-cards .info-card{
+        width: 50vw;
+        height: 50vw;
+    }
+}
+
+.article-page .container-art .info-section .info-cards .info-card .info-card-header{
+    color: var(--main-color);
+}
+
+.article-page .container-art .info-section .info-cards .info-card .info-card-header h1{
+    font-weight: 400;
+}
+
+.article-page .container-art .info-section .info-cards .info-card .info-card-text h2{
+    font-weight: 300;
+}
+
+@media (max-width: 355px){
+.article-page .container-art .info-section .info-cards .info-card .info-card-header h1{
+    font-size: 20px;
+    }
+.article-page .container-art .info-section .info-cards .info-card .info-card-text h2{
+    font-size: 17px;
+    }
+}
+
+@media (max-width: 576px){
+    .article-page .container-art .info-section .info-cards .info-card .info-card-icon i{
+     font-size: 20vw;
+    }
 }
 
 
-/* end sidebar */
 
+/* end info */
+/* start article */
 .article-page{
-background-color: red;
-word-break: break-all;
 position: relative;
 }
+.article-page .container-art .article{
+    word-break: keep-all;
+    position: relative;
+    height: calc(100vh - 58.4px);
+    font-weight: 300;
+    overflow: auto;
+}
+
+.article-page .container-art .article .article-header{
+    margin: 0 auto;
+    width: fit-content;
+    color: var(--main-color);
+}
+
+
+
+.article-page .container-art .article .article-section{
+    direction: rtl;
+    line-height: 2;
+    word-spacing: 5px;
+    padding: 0 15px;
+    width: 95%;
+    margin: 100px auto;
+}
+
+.article-page .container-art .article .article-section h2{
+    color: var(--main-color);
+}
+
+.article-page .container-art .article .article-section span{
+    color: var(--main-dark);
+}
+/* end article */
