--- a/css/article.css
+++ b/css/article.css
@@ -32,17 +32,70 @@
     width: 100%;
     height: calc(100vh - 58.4px);
     display: grid;
-    grid-template-columns: 18% 1fr;
+    grid-template-columns: 1fr;
 }
 
-@media (max-width: 350px){
-    .page{
-        grid-template-columns: 25% 1fr;
-    }
+.back-to-top{
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    position: absolute;
+    right: 10px;
+    bottom: 25px;
+    z-index: 999;
+    background-color: var(--main-dark);
+}
+
+.back-to-top i{
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translatex(-50%) translateY(-50%);
+    -webkit-transform: translatex(-50%) translateY(-50%);
+    -moz-transform: translatex(-50%) translateY(-50%);
+    -ms-transform: translatex(-50%) translateY(-50%);
+    -o-transform: translatex(-50%) translateY(-50%);
 }
 
 /* end main page */
 /* start sidebar */
+.bookmark-section{
+    width: 95%;
+    margin: 30px auto;
+    padding: 5px 15px;
+    background-color: var(--main-bg-color);
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -o-border-radius: 6px;
+
+}
+
+.bookmark-section .bookmark-section-header{
+    color: var(--main-color);
+    margin: 0 auto;
+    width: fit-content;
+}
+
+.bookmark-section .bookmark{
+    border-radius: 6px;
+    background-color: white;
+    color: var(--main-color);
+    display: block;
+    margin: 15px;
+    padding: 15px;
+    text-align: center;
+    text-decoration: none;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -o-border-radius: 6px;
+}
 
 .sidebar{
     background-color: var(--main-bg-color);
