--- a/css/article.css
+++ b/css/article.css
@@ -238,3 +238,36 @@ position: relative;
     color: var(--main-dark);
 }
 /* end article */
+/* reference */
+.reference-section{
+    width: 95%;
+    margin: 30px auto;
+    padding: 5px 15px;
+    background-color: var(--main-bg-color);
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -o-border-radius: 6px;
+}
+
+.reference-section .reference-section-header{
+    color: var(--main-color);
+    margin: 0 auto;
+    width: fit-content;
+}
+
+.reference-section .reference{
+    border-radius: 6px;
+    background-color: white;
+    color: var(--main-color);
+    display: block;
+    margin: 15px;
+    padding: 15px;
+    text-align: center;
+    text-decoration: none;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -o-border-radius: 6px;
+}
