--- a/css/global.css
+++ b/css/global.css
@@ -186,8 +186,15 @@ button{
   align-items: center;
 }
 
+.nav .container .logo{
+  position: relative;
+  width: 50px;
+  height: 20px;
+}
+
 .nav .container .logo img {
-  width: 40px;
+  width: 50px;
+  position: absolute;
 }
 
 .nav .container .links .main-links {
