--- a/css/P-catg.css
+++ b/css/P-catg.css
@@ -24,7 +24,7 @@
     position: relative;
     background-color: white;
     display: flex;
-    padding-top: calc(57% + 45px);
+    padding-top: calc(56.25% + 45px);
     border-radius: 6px;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
@@ -37,20 +37,45 @@
     -ms-transition: 0.3s;
     -o-transition: 0.3s;
     background-color: var(--main-bg-color);
+    overflow: hidden;
 }
 
 .projects .container .project-cards .project-card:hover{
   box-shadow: 0 0 5px 2px;
 }
   
+.projects .container .project-cards .project-card .project-card-img{
+    background-color: #f3a237;
+    position: absolute;
+    top: 0;
+    border-radius: 6px;
+    width: 100%;
+    padding-top: 56.25%;
+    overflow: hidden;
+}
+
   .projects .container .project-cards .project-card .project-card-img img {
     position: absolute;
     width: 100%;
     top: 0;
-    height: fit-content;
     cursor: pointer;
-  }
+    transition: 1s;
+    -webkit-transition: 1s;
+    -moz-transition: 1s;
+    -ms-transition: 1s;
+    -o-transition: 1s;
+}
   
+.projects .container .project-cards .project-card .project-card-img img:hover{
+  transform: scale(1.2) rotate(5deg);
+  -webkit-transform: scale(1.2) rotate(5deg);
+  -moz-transform: scale(1.2) rotate(5deg);
+  -ms-transform: scale(1.2) rotate(5deg);
+  -o-transform: scale(1.2) rotate(5deg);
+  filter: brightness(70%);
+  -webkit-filter: brightness(70%);
+}
+
   .projects .container .project-cards .project-card .project-card-text{
     position: absolute;
     color: black;
@@ -65,6 +90,13 @@
     -moz-border-radius: 0 0 6px 6px;
     -ms-border-radius: 0 0 6px 6px;
     -o-border-radius: 0 0 6px 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
+
+.projects .container .project-cards .project-card .project-card-text p{
+  margin: 0;
+}
 /* end projects */
