--- a/css/catg.css
+++ b/css/catg.css
@@ -20,7 +20,7 @@
     }
 }
 
-@media (min-width: 768.1px) and (min-height: 856px){
+@media (min-width: 767.1px) and (min-height: 856px) and (orientation: portrait){
     .catagories{
         height: calc(100% - 58px);
     }
